Improve accuracy and detail in Developer Guide
Updates various sections for clarity, correctness, and specificity based on code review.